Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/enum/EnumSwitch2.out
EnumSwitch2.java:14:16: compiler.err.enum.label.must.be.unqualified.enum
EnumSwitch2.java:15:16: compiler.err.enum.label.must.be.unqualified.enum
2 errors
